--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -18,3 +18,14 @@
     font-size: 25px !important;
   
 }
+/* .MAINHEAD1{
+    font-size: 15px !important;
+    padding:10px;
+    color:white
+} */
+    .nav-item a{
+        font-size: 15px !important;
+        padding:10px;
+        color:white
+      
+    }
