--- a/src/Pages/Plansform/Plansform.css
+++ b/src/Pages/Plansform/Plansform.css
@@ -1,15 +1,24 @@
-.plan-mainheadeing{
+.plan1-mainheadeing{
     display: flex;
     justify-content: center;
     font-size: 50px;
     margin-top: 20px;
     padding-bottom: 20px;
 }
-.plancontainer{
+.plan1container{
     
 padding:0px 200px;
 
 
+}
+.pl1btn{
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+.pl1btn button{
+    /* margin: 10px; */
+    /* padding: 0px; */
 }
 .makeStyles-avatar-28 {
     margin: 8px;
@@ -19,7 +28,7 @@ padding:0px 200px;
     .MuiButton-containedPrimary:hover{
 zoom: 1.04;
     }
-.plancontainer h3{
+.plan1container h3{
     display: flex;
     justify-content: center;
     font-size: 30px;
@@ -27,7 +36,7 @@ zoom: 1.04;
     padding-bottom: 40px;
     }
     @media screen and (max-width:800px){
-        .plancontainer{
+        .plan1container{
     
             padding:0px 100px;
             
@@ -35,10 +44,15 @@ zoom: 1.04;
             }  
     }
     @media screen and (max-width:800px){
-        .plancontainer{
+        .plan1container{
     
             padding:0px 30px;
             
             
             }  
+    }
+    @media screen and (max-width:1000px){
+    .pl1btn{
+        flex-direction: column;
+    }
     }
